[gd_scene load_steps=2 format=3 uid="uid://brldpw5luakhu"]

[ext_resource type="Script" uid="uid://b8yshgnhjumii" path="res://properties/sector_components/tech_upgrade/tech_upgrade_modifiers/tech_upgrade_modifier_3.gd" id="1_gox1j"]

[node name="TechUpgradeModifier3" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1_gox1j")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ItemLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Item name"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label5" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Add damage:"

[node name="AddDamageLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label6" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Add shot time:"

[node name="AddShotTimeLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label7" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Add shot time user:"

[node name="AddShotTimeUserLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="RemoveButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Remove"
